--- a/src/main/resources/FXML/books.fxml
+++ b/src/main/resources/FXML/books.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,6 +16,7 @@
   <rowConstraints>
     <RowConstraints minHeight="30.0" prefHeight="60.0" valignment="CENTER" vgrow="NEVER" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
   </rowConstraints>
    <children>
       <TableView fx:id="tableView" prefHeight="127.0" prefWidth="600.0" GridPane.rowIndex="1" />
@@ -29,5 +31,21 @@
             <Insets bottom="20.0" top="20.0" />
          </padding>
       </Label>
+      <Button fx:id="editButton" mnemonicParsing="false" text="Edit" GridPane.rowIndex="2" />
+      <Button fx:id="newButton" mnemonicParsing="false" text="New" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="50.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="110.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="saveButton" mnemonicParsing="false" text="Save" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="170.0" />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
