--- a/library.client/src/main/resources/FXML/login.fxml
+++ b/library.client/src/main/resources/FXML/login.fxml
@@ -9,18 +9,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.LoginPanelController">
    <children>
-      <PasswordField layoutX="193.0" layoutY="257.0" prefHeight="25.0" prefWidth="179.0" />
-      <TextField layoutX="193.0" layoutY="200.0" prefHeight="25.0" prefWidth="179.0" />
+      <PasswordField fx:id="passwordField" layoutX="193.0" layoutY="257.0" prefHeight="25.0" prefWidth="179.0" />
+      <TextField fx:id="logField" layoutX="193.0" layoutY="200.0" prefHeight="25.0" prefWidth="179.0" />
       <ImageView fitHeight="208.0" fitWidth="294.0" layoutX="153.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/logo.PNG" />
+            <Image url="@../images/logo.PNG" />
          </image>
       </ImageView>
       <ImageView fitHeight="121.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/background_color.png" />
+            <Image url="@../images/background_color.png" />
          </image>
       </ImageView>
       <Text fill="WHITE" layoutX="190.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Logowanie">
@@ -38,7 +38,7 @@
             <Font name="Century Gothic" size="20.0" />
          </font>
       </Text>
-      <Button layoutX="401.0" layoutY="221.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../../css/DarkTheme.css" text="Zaloguj">
+      <Button layoutX="401.0" layoutY="221.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Zaloguj">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
