--- a/library.client/src/main/resources/FXML/books.fxml
+++ b/library.client/src/main/resources/FXML/books.fxml
@@ -4,25 +4,34 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.BooksPanelController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="30.0" prefHeight="60.0" valignment="CENTER" vgrow="NEVER" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+    <RowConstraints maxHeight="322.0" minHeight="10.0" prefHeight="322.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="57.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="124.0" minHeight="10.0" prefHeight="49.0" vgrow="NEVER" />
   </rowConstraints>
    <children>
-      <TableView fx:id="tableView" prefHeight="127.0" prefWidth="600.0" GridPane.rowIndex="1" />
-      <Label fx:id="windowLabel" text="Label" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <ImageView fitHeight="128.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+         <image>
+            <Image url="@../images/background_color.png" />
+         </image>
+      </ImageView>
+      <TableView fx:id="tableView" prefHeight="180.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label fx:id="windowLabel" text="Książki" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
-            <Font name="System Bold" size="27.0" />
+            <Font name="Century Gothic" size="46.0" />
          </font>
          <GridPane.margin>
             <Insets bottom="20.0" top="20.0" />
@@ -31,27 +40,27 @@
             <Insets bottom="20.0" top="20.0" />
          </padding>
       </Label>
-      <Button fx:id="onEditButton" mnemonicParsing="false" text="On" GridPane.rowIndex="2">
+      <Button fx:id="onEditButton" mnemonicParsing="false" text="On" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="60.0" />
          </GridPane.margin></Button>
-      <Button fx:id="saveButton" mnemonicParsing="false" text="Save" GridPane.rowIndex="2">
+      <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Zapisz" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="100.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" GridPane.rowIndex="2">
+      <Button fx:id="deleteButton" mnemonicParsing="false" text="Usuń" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="240.0" />
          </GridPane.margin>
       </Button>
-      <Label text="Edit Mode:" GridPane.rowIndex="2" />
-      <Button fx:id="newButton" mnemonicParsing="false" text="New" GridPane.rowIndex="2">
+      <Label text="Edit Mode:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button fx:id="newButton" mnemonicParsing="false" prefWidth="136.0" text="Dodaj" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="320.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="resetButton" mnemonicParsing="false" text="Reset" GridPane.rowIndex="2">
+      <Button fx:id="resetButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" text="Reset" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets left="150.0" />
          </GridPane.margin>
