--- a/library.client/src/main/resources/FXML/menu.fxml
+++ b/library.client/src/main/resources/FXML/menu.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.EmplMenuController">
+<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.MenuController">
    <children>
       <ImageView fitHeight="122.0" fitWidth="601.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -24,12 +24,12 @@
             <Font name="Century Gothic" size="46.0" />
          </font>
       </Text>
-      <Button layoutX="215.0" layoutY="151.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Zasoby" textOverrun="CLIP">
+      <Button fx:id="booksButton" layoutX="215.0" layoutY="151.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Zasoby" textOverrun="CLIP">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="215.0" layoutY="207.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Wypożyczenia">
+      <Button fx:id="borrowButton" layoutX="215.0" layoutY="207.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Wypożyczenia">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
@@ -60,7 +60,7 @@
             <Reflection />
          </effect>
       </Line>
-      <Button layoutX="215.0" layoutY="262.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Klient">
+      <Button fx:id="userButton" layoutX="215.0" layoutY="262.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" stylesheets="@../css/DarkTheme.css" text="Klient">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
