--- a/library.client/src/main/resources/FXML/resetpassword.fxml
+++ b/library.client/src/main/resources/FXML/resetpassword.fxml
@@ -9,8 +9,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.TextField?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.RemindPasswordController">
    <children>
       <ImageView fitHeight="121.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,13 +22,13 @@
             <Font name="Century Gothic" size="46.0" />
          </font>
       </Text>
-      <PasswordField layoutX="125.0" layoutY="192.0" prefHeight="25.0" prefWidth="377.0" />
-      <Label layoutX="125.0" layoutY="177.0" text="Podaj e-mail:">
+      <TextField fx:id="loginTextField" layoutX="125.0" layoutY="192.0" prefHeight="25.0" prefWidth="377.0" />
+      <Label layoutX="125.0" layoutY="177.0" text="Adres e-mail:">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="loginButton" layoutX="374.0" layoutY="240.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Dalej">
+      <Button fx:id="sendButton" layoutX="374.0" layoutY="240.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Wyślij">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
