--- a/library.client/src/main/resources/FXML/abstractTableWindow.fxml
+++ b/library.client/src/main/resources/FXML/abstractTableWindow.fxml
@@ -54,7 +54,7 @@
             <Insets left="240.0" />
          </GridPane.margin>
       </Button>
-      <Label text="Tryb edycji:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label fx:id="editModeLabel" text="Tryb edycji:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Button fx:id="newButton" mnemonicParsing="false" prefWidth="136.0" text="Dodaj" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="320.0" />
