--- a/library.client/src/main/resources/FXML/adminMenu.fxml
+++ b/library.client/src/main/resources/FXML/adminMenu.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.MenuController">
+<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.AdminMenuController">
    <children>
       <ImageView fitHeight="122.0" fitWidth="601.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -66,5 +66,7 @@
          </font>
       </Button>
       <Button fx:id="employeeButton" layoutX="82.0" layoutY="229.0" mnemonicParsing="false" text="Pracownicy" />
+      <Button fx:id="changePasswordButton" layoutX="260.0" layoutY="392.0" mnemonicParsing="false" text="Zmień hasło" />
+      <Button fx:id="emailButton" layoutX="428.0" layoutY="270.0" mnemonicParsing="false" text="Email o nowych książkach" />
    </children>
 </AnchorPane>
