--- a/library.client/src/main/resources/FXML/changepassword.fxml
+++ b/library.client/src/main/resources/FXML/changepassword.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.ChangePasswordController">
    <children>
       <ImageView fitHeight="121.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,22 +21,24 @@
             <Font name="Century Gothic" size="46.0" />
          </font>
       </Text>
-      <PasswordField layoutX="115.0" layoutY="161.0" prefHeight="25.0" prefWidth="377.0" />
-      <PasswordField layoutX="115.0" layoutY="207.0" prefHeight="25.0" prefWidth="377.0" />
-      <Label layoutX="115.0" layoutY="146.0" text="Wprowadź nowe hasło">
+      <PasswordField fx:id="newPasswordTextField" layoutX="112.0" layoutY="213.0" prefHeight="25.0" prefWidth="377.0" />
+      <PasswordField fx:id="repeatedPasswordTextField" layoutX="115.0" layoutY="270.0" prefHeight="25.0" prefWidth="377.0" />
+      <Label layoutX="115.0" layoutY="193.0" text="Wprowadź nowe hasło">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="115.0" layoutY="192.0" text="Powtórz nowe hasło">
+      <Label layoutX="115.0" layoutY="255.0" text="Powtórz nowe hasło">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="loginButton" layoutX="364.0" layoutY="271.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Zatwierdź">
+      <Button fx:id="confirmButton" layoutX="364.0" layoutY="309.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Zatwierdź">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
       </Button>
+      <Label layoutX="111.0" layoutY="137.0" text="Aktualne hasło" />
+      <PasswordField fx:id="oldPasswordTextField" layoutX="112.0" layoutY="154.0" prefHeight="25.0" prefWidth="377.0" />
    </children>
 </Pane>
