--- a/library.client/src/main/resources/FXML/employeeMenu.fxml
+++ b/library.client/src/main/resources/FXML/employeeMenu.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.MenuController">
+<AnchorPane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.AdminMenuController">
    <children>
       <ImageView fitHeight="122.0" fitWidth="601.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -65,5 +65,6 @@
             <Font name="Century Gothic" size="16.0" />
          </font>
       </Button>
+      <Button fx:id="changePasswordButton" layoutX="274.0" layoutY="392.0" mnemonicParsing="false" text="Zmień hasło" />
    </children>
 </AnchorPane>
