--- a/library.client/src/main/resources/FXML/abstractTableWindow.fxml
+++ b/library.client/src/main/resources/FXML/abstractTableWindow.fxml
@@ -1,69 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="30.0" prefHeight="60.0" valignment="CENTER" vgrow="NEVER" />
-    <RowConstraints maxHeight="322.0" minHeight="10.0" prefHeight="322.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="57.0" vgrow="NEVER" />
-      <RowConstraints maxHeight="124.0" minHeight="10.0" prefHeight="49.0" vgrow="NEVER" />
-  </rowConstraints>
+
+<Pane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="128.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+      <ImageView fitHeight="128.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/background_color.png" />
          </image>
       </ImageView>
-      <TableView fx:id="tableView" prefHeight="180.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label fx:id="windowLabel" text="Książki" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <TableView fx:id="tableView" layoutY="119.0" prefHeight="225.0" prefWidth="600.0" />
+      <Label fx:id="windowLabel" layoutX="232.0" layoutY="14.0" text="Książki" textFill="WHITE">
          <font>
             <Font name="Century Gothic" size="46.0" />
          </font>
-         <GridPane.margin>
-            <Insets bottom="20.0" top="20.0" />
-         </GridPane.margin>
          <padding>
             <Insets bottom="20.0" top="20.0" />
          </padding>
       </Label>
-      <Button fx:id="onEditButton" mnemonicParsing="false" text="Włącz" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="60.0" />
-         </GridPane.margin></Button>
-      <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Zapisz" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="100.0" />
-         </GridPane.margin>
+      <Line cache="true" endX="485.0" layoutX="116.0" layoutY="345.0" startX="-115.0" stroke="#2b0349" strokeLineCap="ROUND" style="-fx-effect: 2;">
+         <fill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#2b0349" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+         <effect>
+            <Reflection />
+         </effect>
+      </Line>
+      <Label fx:id="editModeLabel" layoutX="69.0" layoutY="361.0" stylesheets="@../css/DarkTheme.css" text="Tryb edycji:">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="onEditButton" layoutX="171.0" layoutY="354.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="95.0" stylesheets="@../css/DarkTheme.css" text="Włącz">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+         <effect>
+            <InnerShadow color="RED" />
+         </effect>
       </Button>
-      <Button fx:id="deleteButton" mnemonicParsing="false" text="Usuń" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="240.0" />
-         </GridPane.margin>
+      <Line cache="true" endX="485.0" layoutX="116.0" layoutY="393.0" startX="-115.0" stroke="#2b0349" strokeLineCap="ROUND" style="-fx-effect: 2;">
+         <fill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#2b0349" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+         <effect>
+            <Reflection />
+         </effect>
+      </Line>
+      <Button fx:id="saveButton" layoutX="230.0" layoutY="405.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Zapisz">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
       </Button>
-      <Label fx:id="editModeLabel" text="Tryb edycji:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button fx:id="newButton" mnemonicParsing="false" prefWidth="136.0" text="Dodaj" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="320.0" />
-         </GridPane.margin>
+      <Button fx:id="deleteButton" layoutX="230.0" layoutY="445.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Usuń">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
       </Button>
-      <Button fx:id="resetButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" text="Reset" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets left="150.0" />
-         </GridPane.margin>
+      <Button fx:id="newButton" layoutX="69.0" layoutY="405.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Dodaj">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="resetButton" layoutX="69.0" layoutY="445.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Reset">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="387.0" layoutY="405.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Powrót">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="387.0" layoutY="445.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Wyloguj">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
       </Button>
    </children>
-</GridPane>
+</Pane>
