--- a/library.client/src/main/resources/FXML/login.fxml
+++ b/library.client/src/main/resources/FXML/login.fxml
@@ -11,9 +11,9 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.LoginPanelController">
    <children>
-      <PasswordField fx:id="passwordField" layoutX="193.0" layoutY="257.0" prefHeight="25.0" prefWidth="179.0" />
-      <TextField fx:id="loginField" layoutX="193.0" layoutY="200.0" prefHeight="25.0" prefWidth="179.0" />
-      <ImageView fitHeight="208.0" fitWidth="294.0" layoutX="153.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
+      <TextField fx:id="loginField" layoutX="203.0" layoutY="176.0" prefHeight="25.0" prefWidth="280.0" />
+      <PasswordField fx:id="passwordField" layoutX="203.0" layoutY="221.0" prefHeight="25.0" prefWidth="280.0" />
+      <ImageView fitHeight="208.0" fitWidth="294.0" layoutX="153.0" layoutY="321.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo.PNG" />
          </image>
@@ -28,21 +28,24 @@
             <Font name="Century Gothic" size="46.0" />
          </font>
       </Text>
-      <Text fill="#2d034d" layoutX="97.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
+      <Text fill="#2d034d" layoutX="106.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
          <font>
             <Font name="Century Gothic" size="20.0" />
          </font>
       </Text>
-      <Text fill="#2d034d" layoutX="97.0" layoutY="277.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hasło">
+      <Text fill="#2d034d" layoutX="105.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hasło">
          <font>
             <Font name="Century Gothic" size="20.0" />
          </font>
       </Text>
-      <Button fx:id="loginButton" layoutX="401.0" layoutY="221.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Zaloguj">
+      <Button fx:id="loginButton" layoutX="353.0" layoutY="265.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" stylesheets="@../css/DarkTheme.css" text="Zaloguj">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="remindPasswordButton" layoutX="447.0" layoutY="307.0" mnemonicParsing="false" text="Nie pamiętam hasła" />
+      <Button fx:id="remindPasswordButton" layoutX="106.0" layoutY="265.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="209.0" stylesheets="@../css/DarkTheme.css" text="Nie pamiętam hasła">
+         <font>
+            <Font name="Century Gothic" size="16.0" />
+         </font></Button>
    </children>
 </Pane>
