--- a/library.client/src/main/resources/FXML/resource_table.fxml
+++ b/library.client/src/main/resources/FXML/resource_table.fxml
@@ -1,60 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.BooksPanelController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="30.0" prefHeight="60.0" valignment="CENTER" vgrow="NEVER" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-  </rowConstraints>
+
+<Pane prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.Controller.BooksPanelController">
    <children>
-      <TableView fx:id="tableView" prefHeight="127.0" prefWidth="600.0" GridPane.rowIndex="1" />
-      <Label fx:id="windowLabel" text="Label" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <Button fx:id="resetButton" layoutX="68.0" layoutY="439.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Reset">
          <font>
-            <Font name="System Bold" size="27.0" />
+            <Font name="Century Gothic" size="14.0" />
          </font>
-         <GridPane.margin>
-            <Insets bottom="20.0" top="20.0" />
-         </GridPane.margin>
+      </Button>
+      <Button fx:id="newButton" layoutX="68.0" layoutY="399.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Dodaj">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="deleteButton" layoutX="241.0" layoutY="439.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Usuń">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="saveButton" layoutX="241.0" layoutY="399.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Zapisz">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="onEditButton" layoutX="161.0" layoutY="346.0" mnemonicParsing="false" stylesheets="@../css/DarkTheme.css" text="Włącz">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+         <effect>
+            <InnerShadow color="RED" />
+         </effect>
+      </Button>
+      <TableView fx:id="tableView" layoutY="119.0" prefHeight="217.0" prefWidth="600.0" />
+      <ImageView fitHeight="121.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/background_color.png" />
+         </image>
+      </ImageView>
+      <Line cache="true" endX="485.0" layoutX="115.0" layoutY="337.0" startX="-115.0" stroke="#2b0349" strokeLineCap="ROUND" style="-fx-effect: 2;">
+         <fill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#2b0349" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+         <effect>
+            <Reflection />
+         </effect>
+      </Line>
+      <Label fx:id="editModeLabel" layoutX="68.0" layoutY="353.0" stylesheets="@../css/DarkTheme.css" text="Tryb edycji:">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Label>
+      <Line cache="true" endX="485.0" layoutX="115.0" layoutY="385.0" startX="-115.0" stroke="#2b0349" strokeLineCap="ROUND" style="-fx-effect: 2;">
+         <fill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#2b0349" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+         <effect>
+            <Reflection />
+         </effect>
+      </Line>
+      <Button layoutX="408.0" layoutY="399.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Powrót">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="408.0" layoutY="439.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" stylesheets="@../css/DarkTheme.css" text="Wyloguj">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </Button>
+      <Label fx:id="windowLabel" layoutX="221.0" layoutY="14.0" text="Zasoby" textFill="WHITE">
+         <font>
+            <Font name="Century Gothic" size="46.0" />
+         </font>
          <padding>
             <Insets bottom="20.0" top="20.0" />
          </padding>
       </Label>
-      <Button fx:id="onEditButton" mnemonicParsing="false" text="On" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="60.0" />
-         </GridPane.margin></Button>
-      <Button fx:id="saveButton" mnemonicParsing="false" text="Save" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="100.0" />
-         </GridPane.margin>
-      </Button>
-      <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="240.0" />
-         </GridPane.margin>
-      </Button>
-      <Label text="Edit Mode:" GridPane.rowIndex="2" />
-      <Button fx:id="newButton" mnemonicParsing="false" text="New" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="320.0" />
-         </GridPane.margin>
-      </Button>
-      <Button fx:id="resetButton" mnemonicParsing="false" text="Reset" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="150.0" />
-         </GridPane.margin>
-      </Button>
    </children>
-</GridPane>
+</Pane>
